<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yonseaker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tab_comment">测评</string>
    <string name="tab_identify">鉴定</string>
    <string name="tab_add">发布</string>
    <string name="tab_message">消息</string>
    <string name="tab_mine">我的</string>   
    <string name="tab_square">最新</string>
    <string name="tab_friend">好友</string>
	<string name="tab_discuss">评论</string>
    <string name="tab_wish">心愿单</string>
    <string name="tab_fans">粉丝</string>
    <string name="tab_inform">通知</string>
    <string name="tab_collect">收藏</string>
    <string name="tab_attention">关注</string>
    
    <string name="dialog_add_what">选择您要发布的类别?</string>
    <string name="dialog_add_comment">发布测评</string>
    <string name="dialog_add_identify">发布鉴定</string>
    
    <string name="title_comment_detail">测评详情</string>
    <string name="title_comment_title">测评标题</string>
    <string name="off_line_write_comment">离线撰写测评</string>
    <string name="title_btn_next">下一步</string>
    
    <string name="comment_detail_intro">简介</string>
    <string name="comment_detail_class">测评项</string>
    <string name="comment_detail_summarize">总评</string>
    <string name="comment_detail_personal">个人数据</string>
    <string name="comment_detail_want_buy">想入</string>
    <string name="comment_detail_yet_buy">已入</string>
    <string name="comment_detail_hot_discussion">热门评论</string>
    <string name="comment_detail_all_discussion">所有评论</string>
    <string name="comment_detail_brand">品牌：</string>
    <string name="comment_detail_model">型号：</string>
     
    <string name="comment_edit_add_intro">添加简介</string>
    <string name="comment_edit_alter_intro">修改简介</string>
    <string name="comment_edit_add_item">添加测评项</string>
    <string name="comment_edit_write_item">撰写测评项</string>
    <string name="comment_edit_add_summarize">添加总评</string>
    <string name="comment_edit_alter_summarize">修改总评</string>
    <string name="comment_edit_necessarily">(必填)</string>
    <string name="comment_edit_save_time">更新时间:</string>
    <string name="comment_edit_save_draft">保存草稿</string>
    <string name="comment_edit_publisht">发布</string>
    <string name="comment_edit_delete_draft">删除该测评</string>
    
    <string name="comment_edit_intro_maxText">500</string>
    <string name="comment_edit_summarize_maxText">800</string>
    <string name="comment_edit_summarize_evaluate">评价</string>
    <string name="comment_edit_summarize_inpute">输入内容</string>
    <string name="comment_edit_summarize_tip">评价为必填项,为评测做个完美总结吧!</string>
    <string name="comment_edit_item_title">测评项标题</string>
    <string name="comment_edit_item_tip">标题,评价,内容为必填,深度测评更容易结交志同道合的鞋友喔!</string>
    <string name="toast_comment_edit_maxText">超过字数限制,%1$s最多%2$d个字</string>
    <string name="comment_edit_item_goon">继续添加测评项</string>
    
    <string name="picker_image_see_detail">查看大图</string>
    <string name="picker_image_back">返回</string>
    <string name="picker_image_album">相册</string>
    <string name="picker_image_camera">相机</string>
    <string name="toast_picker_image_over_max">已达到最多图片数量</string>
    
    <string name="personal_item_height">身高</string>
    <string name="personal_item_weight">体重</string>
    <string name="personal_item_bounce">弹跳</string>
    
    <string name="select_brand">选择品牌</string>
    <string name="hot_brand_nike">Nike</string>
    <string name="hot_brand_adidas">Adidas</string>
    <string name="hot_brand_lining">李宁</string>
    <string name="hot_brand_reebok">Reebok</string>
    <string name="hot_brand_ua">UA</string>
    <string name="hot_brand_pick">匹克</string>
    <string name="hot_brand_anta">安踏</string>
    <string name="hot_brand_361">361°</string>
    <string name="hot_brand_other">其他</string>
        
    <string name="select_model">选择型号</string>
    <string name="comment_edit_intro_inpute1">输入对应型号</string>
    <string name="comment_edit_intro_inpute2">快向大家介绍这款球鞋吧!</string>
    <string name="comment_edit_intro_inpute3">对，如同初恋般的感觉，写下对该球鞋第一印象，初次穿着感受及实战后的快感，当然，也可以根据个人喜好，自由阐述</string>
    <string name="identify_detail_quality">正品</string>
    
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载 &#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <!-- setError string -->
    <string name="error_comment_title_no_null">o(╯□╰)o标题不可为空哦！</string>
    <string name="error_comment_brand_no_null">o(╯□╰)o请选择球鞋品牌！</string>
    <string name="error_comment_model_no_null">o(╯□╰)o请选择球鞋型号！</string>   
    <string name="error_comment_item_title_no_null">o(╯□╰)o测评项怎么可以没有标题！</string>
    <string name="error_comment_item_sumstar_no_null">o(╯□╰)o请对该测评项打分！</string>
    <string name="error_comment_item_intro_no_null">o(╯□╰)o面对爱鞋，怎么也得写个20字表达下感受吧？</string>
    <string name="error_comment_intro_no_null">o(╯□╰)o面对爱鞋，怎么也得写个20字表达下感受吧？</string>
    <string name="error_comment_sumstar_no_null">o(╯□╰)o来给爱鞋打个总分吧~</string>    
    <string name="error_login_username_no_null">o(╯□╰)o用户名不可为空哦！</string>
    <string name="error_login_username_illegal">o(╯□╰)o用户名不合法！</string>
    <string name="error_login_password_no_null">o(╯□╰)o密码不可为空哦！</string>
    <string name="error_login_password_illegal">o(╯□╰)o密码不合法！</string>
    <string name="error_login_re_password_no_null">o(╯□╰)o确认密码不可为空哦！</string>
    <string name="error_login_re_password_illegal">o(╯□╰)o确认密码不合法！</string>
    <string name="error_login_passwords_no_same">o(╯□╰)o密码和确认密码不一致！</string>
    <string name="error_user_no_nickname">o(╯□╰)o身为sneaker,在江湖行走怎么可以没有酷炫吊炸天的昵称呢？</string>
    
    
    <string name="dialog_comment_save_intro">保存简介</string>
    <string name="dialog_comment_drop_intro">舍弃简介</string>
    <string name="dialog_comment_save_item">保存测评项</string>
    <string name="dialog_comment_drop_item">舍弃测评项</string>
    <string name="dialog_comment_save_sum">保存总评</string>
    <string name="dialog_comment_drop_sum">舍弃总评</string>
    <string name="dialog_comment_save_draft">保存测评草稿</string>
    <string name="dialog_comment_drop_draft">舍弃测评草稿</string>
    <string name="dialog_comment_delete_item">删除该测评项</string>
    <string name="dialog_comment_back_item">返回继续编辑</string>
    
    <string name="toast_twice_press_exict">再按一次退出程序</string>
    <string name="toast_draft_save_success">测评草稿保存成功！</string>
    <string name="toast_draft_publish_success">测评发布成功！</string>
    <string name="toast_draft_delete_success">删除该测评成功！</string>
    <string name="toast_draft_save_failure">测评草稿保存失败！</string>
    <string name="toast_draft_publish_failure">测评发布失败！</string>
    <string name="toast_draft_delete_failure">删除该测评失败！</string>
    
    <string name="see_more_comment">查看更多评论</string>
    <string name="title_comments">评论</string>
    <string name="title_comments_input">没事写两句</string>
    
    <string name="dialog_tip">提示</string>
    <string name="dialog_user_is_login">登录后才有权查看？</string>
    <string name="dialog_user_ok">是</string>
    <string name="dialog_user_cancle">否</string>
    
    <string name="app_logo_tip">From sneaker For sneaker</string>
    <string name="user_what_todo">我想用</string>
    <string name="user_mobile_register">注册</string>
    
    <string name="hint_username">用户(3-15位)</string>
    <string name="hint_password">密码(6-16位)</string>
    <string name="hint_re_password">确认密码</string>
    <string name="hint_input_signature">请输入签名</string>
    
    <string name="user_find_password">找回密码</string>
    <string name="user_login">登录</string>
    <string name="user_logout">退出</string>
    <string name="user_register">注册</string>
    <string name="user_star_yosneaker">开启Yosneaker之旅</string>
    
    <string name="edit_user_info">完善资料</string>
    <string name="user_info">基本资料</string>
    <string name="user_personal">个人数据</string>
    <string name="user_edit_portrait">更换头像</string>
    <string name="user_nickname">昵称</string>
    <string name="user_gender">性别</string>
    <string name="user_signature">签名</string>
    <string name="user_personal_seat">位置</string>
    <string name="user_personal_play">打法</string>
    
    <string name="user_ok">确定</string>
    <string name="user_cancle">取消</string>
    
    <string name="user_nickname_input">请输入昵称</string>
    <string name="user_nickname_tip">酷炫的昵称可以更好的彰显你的个性！</string>
    
    
    <string name="user_personal_play_tip">明确的打法不仅可以展示骚年的特色，更可以让你的测评有参考依据</string>
    
    
    <string name="mine_share_article_none">马上分享你的第一篇测评吧！</string>
    <string name="mine_wish_none">你的心愿单里空无一物，人不能没有梦想，快去搜寻吧~</string>
    <string name="mine_fans_none">你还没有粉丝哦，多多发布测评才能得到大家的关注~</string>
    <string name="mine_collect_none">收藏夹里空无一物，快去搜寻好文章吧~</string>
    <string name="mine_attention_none">你还没有关注任何鞋友，关注鞋友才能发现更多有趣的测评内容~</string>
    
    <string name="title_add_friend">添加好友</string>
    <string name="mine_shearch">搜索用户名...</string>
    <string name="mine_add_other_way">或从以下方式添加</string>
    <string name="mine_add_weibo">添加新浪微博朋友</string>
    <string name="mine_add_address_book">添加通讯录朋友</string>
    <string name="mine_add_weixin">添加微信好友</string>
    <string name="mine_add_qq">添加qq好友</string>
    
     <string name="title_settings">设置</string>
    <string name="mine_settings_personal">个人设置</string>
    <string name="mine_settings_net">连接社交网络</string>
    <string name="mine_settings_notice">消息推送设置</string>
    <string name="mine_settings_other">其他</string>
    <string name="mine_settings_clean_cache">清空缓存</string>
    <string name="mine_settings_check_newversoin">检查新版本</string>
    <string name="mine_settings_feedback">意见反馈</string>
    
    <string name="title_settings_net">连接社交网络</string>
    <string name="mine_settings_net_bind_weibo">绑定新浪微博</string>
    <string name="mine_settings_net_bind_qzone">绑定QQ空间</string>
    
    <string name="title_settings_notice">消息推送设置</string>
    <string name="mine_settings_notice_handpick">精选推荐</string>
    <string name="mine_settings_notice_collect">收藏测评</string>
    <string name="mine_settings_notice_wish">想入/已入</string>
    <string name="mine_settings_notice_comment">评论</string>
    
    <string name="dialog_mine_settings_clean_cache">你确定要清除所有缓存吗?</string>
    <string name="toast_mine_settings_clean_cache">清理缓存成功</string>
    
    <string name="toast_mine_settings_check_newversoin">已是最新版本</string>
    
</resources>
