<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:titleBar="http://schemas.android.com/apk/res-auto"
    xmlns:optionItemView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/comment_item_bg"
    android:orientation="vertical" >

    <com.yosneaker.client.view.CustomTitleBar 
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        titleBar:show_back_icon="true"
        titleBar:center_title="@string/edit_user_info"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:text="@string/user_info" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/tab_text_selected" />
    
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/head_sculpture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:icon="@drawable/list_user_head"
        optionItemView:left_title="@string/user_edit_portrait"/>
    
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/nick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/user_nickname"/>
    
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/user_gender"/>
    
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/user_signature"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textSize="18sp"
        android:text="@string/user_personal" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:background="@color/tab_text_selected" />

    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/personal_item_height"/>
   
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/personal_item_weight"/>
    
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/bounce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/personal_item_bounce"/>
    
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/seat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/user_personal_seat"/>
    
    <com.yosneaker.client.view.OptionItemView 
        android:id="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        optionItemView:left_title="@string/user_personal_play"/>
    
</LinearLayout>