<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical" >

    <include
        android:id="@+id/mTitleBar"
        layout="@layout/title_bar" />

    <TextView
        style="@style/intro_text_label_style"
        android:text="@string/select_brand" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
         >

        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
         	>
        
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_nike"
             />
        
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_adidas" />
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_lining"/>
        
        </LinearLayout>
        
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
         	>
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_reebok" />
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_ua"/>
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_pick"/>
        </LinearLayout>
        
        <LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
         	>
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_anta"/>
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_361"/>
        <TextView
            style="@style/intro_brand_style"
            android:text="@string/hot_brand_other"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        style="@style/intro_text_label_style"
        android:layout_marginBottom="6dp"
        android:text="@string/select_model" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="?android:attr/listDivider" />
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
         >
    	<EditText
            android:id="@+id/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/comment_edit_item_title"
            android:background="@null"/>
    
    </RelativeLayout>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="?android:attr/listDivider" />
    
    <TextView
        style="@style/intro_text_label_style"
        android:layout_marginBottom="6dp"
        android:text="@string/comment_edit_summarize_evaluate" />
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="?android:attr/listDivider" />
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp" >

        <EditText
            android:id="@+id/edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:gravity="top"
            android:textSize="@dimen/edit_text_size"
            android:hint="@string/comment_edit_intro_inpute2"
            android:minLines="6" />

        <TextView
            android:id="@+id/text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/edit_text"
            android:layout_alignParentRight="true"
            android:layout_margin="5dp"
            android:text="@string/comment_edit_intro_maxText"
            android:textColor="@color/gray" />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="?android:attr/listDivider" />
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginTop="20dp"
    	android:layout_marginLeft="10dp"
    	android:gravity="center" >
    
        <ImageView 
            android:layout_width="24dp"
    		android:layout_height="24dp"
    		android:background="@drawable/act_tip"
            />
        
        <TextView 
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginLeft="10dp"
    		android:layout_marginRight="10dp"
    		android:textSize="@dimen/tip_text_size"
    		android:textColor="@color/gray"
    		android:text="@string/comment_edit_intro_inpute3"
            />

        
    </LinearLayout>
    
</LinearLayout>