<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/mTitleBar"
        layout="@layout/title_bar" />

    <EditText
        android:id="@+id/et_login_username"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/input_bg_focus"
        android:hint="@string/hint_username"
        android:maxLength="30" />

    <EditText
        android:id="@+id/et_login_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="30dp"
        android:inputType="textPassword"
        android:background="@drawable/input_bg_focus"
        android:hint="@string/hint_password"
        android:maxLength="30" />

    <TextView
        android:id="@+id/tv_login_find_password"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="right"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:text="@string/user_find_password" />
    
    <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginLeft="25dp"
        		android:layout_marginRight="25dp"
        		android:layout_marginTop="20dp"
                android:background="@color/tab_text_selected"
                android:textSize="@dimen/btn_text_size"
                android:text="@string/user_login" />
    
<!--     <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/user_login"
        android:textColor="@color/gray"
        android:textSize="@dimen/btn_text_size" /> -->

</LinearLayout>