<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    
    
    <include
        android:id="@+id/mTitleBar"
        layout="@layout/title_bar" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical" >
    
        <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <include
        android:id="@+id/in_edit_main_img"
        layout="@layout/view_edit_comment_main_img" />
    
    <include
        android:id="@+id/in_edit_intro"
        layout="@layout/view_edit_comment_intro" />
    
    <include
        android:id="@+id/in_edit_item"
        layout="@layout/view_edit_comment_item" />
    
    <include
        android:id="@+id/in_edit_summarize"
        layout="@layout/view_edit_comment_summarize" />
    
    <LinearLayout
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:layout_marginTop="15dp"
    	android:layout_marginLeft="10dp"
    	android:orientation="horizontal"
        >
    
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/gray"
        android:text="@string/comment_edit_save_time"
        />
    <TextView 
        android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:textColor="@color/gray"
        android:text="两天前"
        />
    </LinearLayout>
    <Button 
            android:id="@+id/btn_save_draft"
            android:layout_width="240dp"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center"
    		android:layout_marginTop="20dp"
    		android:textSize="@dimen/btn_text_size"
    		android:layout_marginLeft="10dp"
    		android:text="@string/comment_edit_save_draft"
    		android:textColor="@color/gray"
            />
  
    
    <Button 
            android:id="@+id/btn_publish_draft"
            android:layout_width="240dp"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center"
    		android:layout_marginTop="16dp"
    		android:textSize="@dimen/btn_text_size"
    		android:layout_marginLeft="10dp"
    		android:text="@string/comment_edit_publisht"
    		android:textColor="@color/gray"
            />
    
    <Button 
            android:id="@+id/btn_delete_draft"
            android:layout_width="240dp"
    		android:layout_height="wrap_content"
    		android:layout_gravity="center"
    		android:layout_marginTop="16dp"
    		android:textSize="@dimen/btn_text_size"
    		android:layout_marginLeft="10dp"
    		android:text="@string/comment_edit_delete_draft"
    		android:textColor="@color/gray"
            />
    </LinearLayout>
    </ScrollView>
</LinearLayout>